<resources>
    <string name="app_name">Digital Elimu</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Next Topic</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_subtopics">SubtopicsActivity</string>
    <item name="idString" type="id"></item>
    <item name="topicString" type="id"></item>
    <item name="idBook" type="id"></item>
    <string name="title_activity_content">ContentActivity</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Valid Email</string>
    <string name="prompt_agent">Agent No</string>
    <string name="prompt_phone">Username is your Phone(0712345678)</string>
    <string name="prompt_password">Input Password (+6 digits)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">This phone address is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_term">Term</string>
    <string name="title_activity_week">Week</string>
    <string name="title_activity_lesson">Lesson</string>
    <string name="title_activity_subscribe">Subscribe</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="banner_ad_unit_id">ca-app-pub-2661863738391546/6045932712</string>
    <string name="title_activity_forgotpass">Forgot Password</string>
    <string name="title_activity_resetcode">Reset Password</string>
    <string name="title_activity_newpassword">NewpasswordActivity</string>
    <string name="title_activity_pesapal">Pesapal</string>
    <string name="title_activity_pdf">Pdf Read</string>
    <string name="title_activity_search">Search a Book</string>
    <string name="title_activity_readpdf">ReadpdfActivity</string>
    <string name="enterAmount">Enter Amount</string>
    <string name="title_activity_pesapalclass">PesapalclassActivity</string>
</resources>
